--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
             </div>
         </div>
     </header>
-    
 
+    <div class="games_list">
+
+        <div class="game_info">
+            <img src="games/ico.jpg" alt="іконка гри">
+            <h3>Назва гри</h3>
+            <p>Опис опис опис опис</p>
+        </div>
+
+    </div>
 
 </body>
 </html>
