--- a/game_page.html
+++ b/game_page.html
@@ -38,13 +38,18 @@
     <def class="work_space">
         <div class="games_list" id="games_list">
 
-            <!-- <div class="game_info">
-                <div class="logo_div">
-                    <img src="games/ico.jpg" alt="іконка гри">
+            <div class="game_info_page" id="game_info_page">
+                <div class="game_img_div" id="game_img_div">
+                    <!-- <img src="games/ico.jpg" alt="іконка гри"> -->
                 </div>
-                <h3>Назва гри</h3>
-                <p>Опис опис опис опис</p>
-            </div> -->
+                <!-- <h3 id="game_name">Назва гри</h3>
+                <p id="game_description">Опис опис опис опис</p>
+                <div class="buttons">
+                    <a href="">Грати</a>
+                    <a href="">Оцінити</a>
+                    <a href="">Git Hub</a>
+                </div> -->
+            </div>
 
         </div>
     </def>
@@ -53,4 +58,4 @@
 </html>
 
 <script src="script.js"></script>
-<script src="index_js.js"></script>
+<script src="game_page_js.js"></script>
